--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercice boite flexible</title>
 </head>
+    <link rel="stylesheet" href="index.css">
 <body>
     <div class="box">
         <div class="item">1</div>
